sandbox/output
StringCalTest.java:54: error: method newLine() is already defined in class StringCalTest
    public void newLine() {
                ^
1 error
